<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/fotoq" />
            <TextView
                style="@style/TextContent.Small.White"
                android:layout_gravity="bottom"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:background="#4D000000"
                android:drawableStart="@drawable/ic_collections_white_18dp"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/dummy_photos"
                android:textColor="@android:color/white" />
        </FrameLayout>

        <TextView
            style="@style/TextContent.Black"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/dummy_value"
            android:textSize="32sp" />



        <TextView
            style="@style/TextContent"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/content_text"
            android:textColor="@android:color/black" />

        <TextView
            style="@style/TextContent.Subtitle"
            android:layout_marginBottom="8dp"
            android:text="@string/detail" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/lahir" />

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/content_specs_lahir" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/hobi" />

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/content_specs_hobi" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/kegiatan" />

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/content_specs_aktif" />
            </TableRow>
        </TableLayout>

        <TextView
            style="@style/TextContent.Subtitle"
            android:layout_marginBottom="8dp"
            android:text="@string/buat" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/logoupgris" />

            <TextView
                style="@style/TextContent"
                android:layout_toEndOf="@+id/profile_image"
                android:layout_toRightOf="@id/profile_image"
                android:text="@string/my_name"
                android:textColor="@android:color/black" />
        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/uts"
            style="@style/ButtonGeneral"/>

    </LinearLayout>
</ScrollView>